# whats-on-my-desk

./: README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
extension/: README.md  content-script.js  manifest.json  service-worker.js
installer/: WhatsOnMyDesk.iss
scripts/: build-desktop.ps1  build-extension.ps1  install-native-host.ps1  package-release.ps1  validate-installer-names.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: desktop_host.rs  lib.rs  main.rs  native_messaging.rs  server.rs  single_instance.rs
src-tauri/src/devices/: classify.rs  deduplicate.rs  enumerate.rs  midi.rs  mod.rs  models.rs  monitors.rs  raw_input.rs  watcher.rs
src-tauri/src/windows/: interaction.rs  mod.rs  workerw.rs
src/bridge/: browserMode.ts  extensionBridge.ts
src/components/: AgentOfflineScreen.tsx  DeviceIllustration.tsx  DeviceScene.tsx  MockControlPanel.tsx  ModeSelector.tsx  SettingsPanel.tsx
src/devices/: mockDevices.ts  types.ts
src/hooks/: useDeviceSnapshot.ts  useSettings.ts
