[package]
name = "whats_on_my_desk_agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "whats_on_my_desk_agent"
crate-type = ["rlib"]

[[bin]]
name = "WhatsOnMyDeskAgent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
include_dir = "0.7"
mime_guess = "2"
webbrowser = "1"
tao = "0.35"
wry = "0.55"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Devices_DeviceAndDriverInstallation", "Win32_Devices_Properties", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Power", "Win32_Media_Audio", "Win32_UI_Input", "Win32_UI_WindowsAndMessaging"] }

